Test Org - Speridian/src/objects/BA_Network_Participation_Status__c.object
<CustomObject>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Network Participation Status</label>
    <nameField>
        <label>Benefit Network</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Participation Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>